--- a/index.html
+++ b/index.html
@@ -145,108 +145,71 @@ function updatePlayerList(data){
   document.getElementById("players").innerText=`Gracze: ${list.filter(n=>!n.includes("(HOST)")).length}/4`;
 }
 
-// 🔹 Rozpoczęcie gry
-async function startGame(){
-  const snap=await roomRef.get();const data=snap.val();
-  const players=Object.keys(data.players).filter(id=>!data.players[id].name.includes("(HOST)"));
-  if(players.length<3)return alert("Potrzebujesz co najmniej 3 graczy!");
-  const word=words[Math.floor(Math.random()*words.length)];
-  const impostor=players[Math.floor(Math.random()*players.length)];
-  const roles={};
-  players.forEach(p=>roles[p]=(p===impostor)?"impostor":"normal");
-  roles[playerId]="host";
-  await roomRef.update({started:true,roles,word,votes:{},roundEnded:false,impostorWin:false});
-  showResult("Runda rozpoczęta!");
-}
-
 // 🔹 Obsługa danych gry po starcie
-function handleGameData(data){
-  hideResult();
+function handleGameData(data) {
+  // Ukryj wszystko na start, żeby nie pojawiało się niepotrzebnie
   document.getElementById("votePanel").classList.add("hidden");
   document.getElementById("impostorGuessPanel").classList.add("hidden");
-  const role=data.roles[playerId];
+  hideResult();
 
-  if(role==="host"){ showResult("👑 Jesteś hostem. Czekaj na zakończenie rundy."); return; }
-  if(role==="impostor"){
+  // Sprawdź, czy gracz ma przypisaną rolę
+  const role = data.roles ? data.roles[playerId] : null;
+  const word = data.word;
+
+  if (!role) return; // jeszcze nie przydzielono ról → nie rób nic
+
+  // HOST
+  if (role === "host") {
+    showResult("👑 Jesteś hostem. Czekaj na zakończenie rundy.");
+    return;
+  }
+
+  // IMPOSTOR
+  if (role === "impostor") {
     showResult("🕵️‍♂️ JESTEŚ IMPOSTOREM!");
     document.getElementById("impostorGuessPanel").classList.remove("hidden");
     return;
   }
 
-  showResult("🔤 Hasło: "+data.word);
-  const allPlayers=Object.entries(data.players)
-    .filter(([id,p])=>!p.name.includes("(HOST)") && data.roles[id]!=="impostor" && p.name!==playerName)
-    .map(([id,p])=>p.name);
-  setTimeout(()=>showVotePanel(allPlayers),2000);
-}
+  // ZWYKŁY GRACZ
+  if (role === "normal") {
+    showResult(`🔤 Hasło: ${word}`);
+    const allPlayers = Object.entries(data.players)
+      .filter(([id, p]) => !p.name.includes("(HOST)") && data.roles[id] !== "impostor" && id !== playerId)
+      .map(([id, p]) => p.name);
+    setTimeout(() => showVotePanel(allPlayers), 2000);
+  }
 
-// 🔹 Panel głosowania
-function showVotePanel(players){
-  const v=document.getElementById("voteButtons");
-  const c=document.getElementById("voteConfirm");
-  v.innerHTML="";c.classList.add("hidden");
-  players.forEach(n=>{
-    const b=document.createElement("button");
-    b.textContent=n;
-    b.onclick=()=>selectVote(n);
-    v.appendChild(b);
-  });
-  document.getElementById("votePanel").classList.remove("hidden");
+  // Jeśli runda już się zakończyła
+  if (data.roundEnded) {
+    endRound(data);
+  }
 }
-
-function selectVote(name){
-  selectedVote=name;
-  document.getElementById("selectedName").innerText="Twój wybór: "+name;
-  document.getElementById("voteConfirm").classList.remove("hidden");
-}
-document.getElementById("btnCancelVote").onclick=function(){
-  selectedVote=null;
-  document.getElementById("voteConfirm").classList.add("hidden");
-};
-document.getElementById("btnConfirmVote").onclick=async function(){
-  if(!selectedVote||hasVoted)return;
-  hasVoted=true;
-  const code=document.getElementById("roomCode").innerText||document.getElementById("joinCode").value;
-  await db.ref(`rooms/${code}/votes/${playerId}`).set(selectedVote);
-  document.getElementById("votePanel").innerHTML="<p>Głos zapisany. Czekaj na innych...</p>";
-  checkAllVoted();
-};
-
-// 🔹 Sprawdzenie zakończenia głosowania
-async function checkAllVoted(){
-  const s=await roomRef.get();const d=s.val();
-  const eligible=Object.keys(d.roles).filter(id=>d.roles[id]!=="host"&&d.roles[id]!=="impostor");
-  const votesCount=Object.keys(d.votes||{}).length;
-  if(votesCount>=eligible.length) await roomRef.update({roundEnded:true});
-}
-
-// 🔹 Panel hasła (tylko impostor)
-document.getElementById("submitWord").onclick=async function(){
-  const val=document.getElementById("impostorWord").value.trim();
-  const s=await roomRef.get();const d=s.val();
-  if(val.toLowerCase()===d.word.toLowerCase()){
-    await roomRef.update({roundEnded:true,impostorWin:true});
-  } else alert("❌ Błędne hasło!");
-};
 
 // 🔹 Zakończenie rundy
-function endRound(data){
+function endRound(data) {
   document.getElementById("votePanel").classList.add("hidden");
   document.getElementById("impostorGuessPanel").classList.add("hidden");
 
-  const impostorId=Object.keys(data.roles).find(id=>data.roles[id]==="impostor");
-  const impostorName=data.players[impostorId].name;
-  const votes=data.votes||{};
-  const role=data.roles[playerId];
+  const impostorId = Object.keys(data.roles).find(id => data.roles[id] === "impostor");
+  const impostorName = data.players[impostorId].name;
+  const votes = data.votes || {};
+  const role = data.roles[playerId];
 
-  if(data.impostorWin){ showResult("🕵️‍♂️ IMPOSTOR ODGADŁ HASŁO!"); return; }
+  if (data.impostorWin) {
+    showResult("🕵️‍♂️ IMPOSTOR ODGADŁ HASŁO!");
+    return;
+  }
 
-  if(role!=="host"){
-    const myVote=votes[playerId];
-    if(myVote===impostorName){ showResult("🎉 GRATULACJE! Zgadłeś impostora!"); }
-    else { showResult("❌ POMYŁKA! Ten gracz nie był impostorem."); }
+  if (role !== "host") {
+    const myVote = votes[playerId];
+    if (myVote === impostorName) {
+      showResult("🎉 GRATULACJE! Zgadłeś impostora!");
+    } else {
+      showResult("❌ POMYŁKA! Ten gracz nie był impostorem.");
+    }
   } else {
-    showResult("Runda zakończona. Impostorem był: "+impostorName);
+    showResult("Runda zakończona. Impostorem był: " + impostorName);
   }
 }
 
@@ -257,3 +220,4 @@ document.getElementById("btnStart").onclick=startGame;
 </script>
 </body>
 </html>
+
